Fix issue with background stretching when tested on an actual mobile screen
MOve leaflet.js to the info app where it is only used now

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,12 +19,13 @@ body {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
     background-image: url("https://res.cloudinary.com/dyg53cwvw/image/upload/v1666646929/media/adults_returning_to_base_prduh4.jpg");
-    min-height: 90vh;
     background-attachment: fixed;
+    top: 0;
+    left: 0;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
+    height: 100vh;
     max-width: 100%;
     overflow-x: hidden;
 }
